Update .gitignore. Tidy up script_gpu_cluster_nonvar.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .spyproject
 models/__init__.py
 utils/__init__.py
-__pycache__
+__init__.py
+__pycache__/
 dump/
 .vscode/launch.json
+.vscode/
+.ipynb_checkpoints/
